@@ -1,5 +1,6 @@
 Sat Dec 25 21:57:14 CET 2010
-	Adding support for basic authentication and client SSL certificates. -MS
+	Adding support for basic authentication.
+	Documented how to obtain client SSL certificates in tutorial. -MS
 	
 Thu Dec 23 15:40:36 CET 2010
 	Increasing nonce length to 128 to support digest authentication
